# ur5_robot

./: README.md
install/: local_setup.sh  setup.sh
install/trac_ik/share/ament_index/resource_index/parent_prefix_path/: trac_ik
install/trac_ik/share/trac_ik/: package.sh
install/trac_ik_examples/lib/trac_ik_examples/: ik_tests
install/trac_ik_examples/share/ament_index/resource_index/parent_prefix_path/: trac_ik_examples
install/trac_ik_examples/share/trac_ik_examples/: local_setup.sh  package.sh
install/trac_ik_lib/share/trac_ik_lib/: local_setup.sh  package.sh
install/ur5_controller/lib/ur5_controller/: moveit_cartesian_planner  position_pub_nomoveit  position_publisher
install/ur5_controller/share/ament_index/resource_index/parent_prefix_path/: ur5_controller
install/ur5_controller/share/ur5_controller/: package.sh  package.xml
install/ur5_controller/share/ur5_controller/config/: ur5_controller.yaml
install/ur5_controller/share/ur5_controller/launch/: controller.launch.py  moveit2_launch.py
install/ur5_moveit_config/share/ur5_moveit_config/: local_setup.sh  package.sh
install/ur5_moveit_config/share/ur5_moveit_config/config/: ur5.srdf
install/ur_description/share/ur_description/: local_setup.sh  package.sh
install/ur_description/share/ur_description/urdf/: ur.ros2_control.xacro  ur5.urdf
log/: latest_build
src/ur5_controller/: CMakeLists.txt
src/ur5_controller/launch/: moveit2_launch.py
src/ur5_controller/src/: mo.txt  moveit_cartesian_planner.cpp  position_pub_nomoveit.cpp  position_publisher.cpp  pp.txt  pp2.txt
src/ur5_moveit_config/: .setup_assistant  package.xml
src/ur5_moveit_config/config/: ur5.urdf.xacro
src/ur_description/: CMakeLists.txt
src/ur_description/launch/: gazebo.launch.py
src/ur_description/srdf/: ur5.srdf
src/ur_description/urdf/: ur.urdf.xacro  ur5.urdf  ur_macro.xacro
