<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="om@todo.todo">om</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <build_depend>position_controllers</build_depend> -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>urdf</depend>
  <depend>ament_index_cpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>geometry_msgs</depend>


  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>    
  <exec_depend>controller_manager</exec_depend>   
  <exec_depend>ament_index_python</exec_depend>
  
  <!-- <exec_depend>position_controllers</exec_depend> -->
 

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
